--- a/style.css
+++ b/style.css
@@ -4,14 +4,72 @@
   box-sizing: border-box;
 }
 
+.article-body p{
+  margin: 0;
+  margin-top: 10px;
+  padding: 0;
+}
+
+.note{
+  color: #000000;
+  font-size: 20px;
+  font-weight: 300;
+  margin: 10px 0;
+
+}
+
+.stepNav{
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  font-size: 26px;
+  margin-top: 10px;
+}
+
+.marginT{
+  margin-top: 10px;
+}
+
+.bottom10{
+  margin-bottom: 50px;
+
+}
+.paddintTop{
+  padding-top: 200px;
+
+}
+
+.boldless{
+  font-weight: 600;
+}
+
+.smallfont{
+  font-size: 20px;
+  margin: 0;
+  padding: 0;
+}
+
+.article-head{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  margin-top: 24px;
+  font-size: 36px;
+}
+
 body {
   background-color: #FFFFFF;
   color: #333333;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 15px;
   font-weight: 400;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
+  margin-right: 60px;
+  margin-left: 60px;
+  padding-left: 100px;
+  padding-right: 100px;
 }
 
 @media (min-width: 1024px) {
@@ -110,8 +168,12 @@ textarea:focus {
 
 .container {
   max-width: 1160px;
-  margin: 0 auto;
+  margin: 0 5%;
   padding: 0 5%;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 26px;
+  color: black;
+  font-weight: 400;
 }
 
 @media (min-width: 1160px) {
@@ -1155,6 +1217,15 @@ ul {
   flex: 1 0 auto;
 }
 
+.article-head{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  margin-top: 24px;
+  font-size: 28px;
+}
+
 @media (min-width: 1024px) {
   .article {
     flex: 1 0 66%;
@@ -1289,7 +1360,10 @@ ul {
 
 .article-body > p:last-child {
   margin-bottom: 0;
+  margin-top: 0;
 }
+
+
 
 .article-content {
   line-height: 1.6;
